--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 }
 
 body {
-  background-color: rgb(31, 2, 2);
+  background: rgb(48,3,3);
+  background: linear-gradient(90deg, rgba(48,3,3,1) 5%, rgba(52,33,17,1) 51%, rgba(56,18,18,1) 100%);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -185,7 +186,7 @@ form input {
   border-radius: 0.5rem;
   border: 1px solid black;
   background-color: white;
-  
+  cursor: pointer;
 }
 
 .selection select {
